fix:min size for horizontal scrolling bars, fix min scrolling offset to prevent issues on mobile

--- a/Frontend/src/app/features/node-entries/node-entries-card-grid/node-entries-card-grid.component.scss
+++ b/Frontend/src/app/features/node-entries/node-entries-card-grid/node-entries-card-grid.component.scss
@@ -84,6 +84,7 @@ $horizontalScrollPadding: 1.5em;
         overflow-y: hidden;
         scroll-snap-type: x mandatory;
         grid-auto-flow: column;
+        grid-template-columns: repeat(auto-fit, $cardWidth);
         grid-auto-columns: minmax($cardWidth, 1fr);
         // slightly more padding to prevent shadow clipping
         padding: $horizontalScrollPadding;
